@@ -9,11 +9,13 @@ This project is a Java application for managing a list of products. It includes 
 * 💾 Save the list to a JSON file
 * 📋 Display all products in the list
 
-## 🚀 Installation
+## 🚀 Installation & Requirements
 1. **Download the project JAR from the repository**
+2. **Make sure you have JDK 21 installed on your machine**
+3. **You'll need to have JavaFX 21 installed on your machine**
 2. **Run the JAR file using the following command:**
 ```bash
-java -jar ProductManager.jar
+java --module-path /path/to/javafx-sdk-20/lib --add-modules javafx.controls,javafx.fxml -jar MyApp.jar
 ```
 
 ---
